[tool.poetry]
name = "ss-exam"
version = "0.1.0"
description = ""
authors = ["eseom <me@eseom.org>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
celery = "^5.2.3"
gunicorn = "^20.1.0"
Flask = "^2.0.3"
pika = "^1.2.0"
boto3 = "^1.21.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
